docs/frontend/parser_text.output
Grammar

    0 $accept: text_file "EOF"

    1 text_file: "EOF"
    2          | sentence "EOF"

    3 sentence: word
    4         | sentence word

    5 word: TEXT
    6     | NUMBER
    7     | DELIMITER
    8     | SYMBOL
    9     | FLOAT
   10     | NEWLINE


Terminals, with rules where they appear

    "EOF" (0) 0 1 2
    error (256)
    NEWLINE (258) 10
    TEXT <std::string> (259) 5
    NUMBER <std::string> (260) 6
    DELIMITER <std::string> (261) 7
    SYMBOL <std::string> (262) 8
    FLOAT <std::string> (263) 9


Nonterminals, with rules where they appear

    $accept (9)
        on left: 0
    text_file (10)
        on left: 1 2
        on right: 0
    sentence (11)
        on left: 3 4
        on right: 2 4
    word (12)
        on left: 5 6 7 8 9 10
        on right: 3 4


State 0

    0 $accept: • text_file "EOF"

    "EOF"      shift, and go to state 1
    NEWLINE    shift, and go to state 2
    TEXT       shift, and go to state 3
    NUMBER     shift, and go to state 4
    DELIMITER  shift, and go to state 5
    SYMBOL     shift, and go to state 6
    FLOAT      shift, and go to state 7

    text_file  go to state 8
    sentence   go to state 9
    word       go to state 10


State 1

    1 text_file: "EOF" •

    $default  reduce using rule 1 (text_file)


State 2

   10 word: NEWLINE •

    $default  reduce using rule 10 (word)


State 3

    5 word: TEXT •

    $default  reduce using rule 5 (word)


State 4

    6 word: NUMBER •

    $default  reduce using rule 6 (word)


State 5

    7 word: DELIMITER •

    $default  reduce using rule 7 (word)


State 6

    8 word: SYMBOL •

    $default  reduce using rule 8 (word)


State 7

    9 word: FLOAT •

    $default  reduce using rule 9 (word)


State 8

    0 $accept: text_file • "EOF"

    "EOF"  shift, and go to state 11


State 9

    2 text_file: sentence • "EOF"
    4 sentence: sentence • word

    "EOF"      shift, and go to state 12
    NEWLINE    shift, and go to state 2
    TEXT       shift, and go to state 3
    NUMBER     shift, and go to state 4
    DELIMITER  shift, and go to state 5
    SYMBOL     shift, and go to state 6
    FLOAT      shift, and go to state 7

    word  go to state 13


State 10

    3 sentence: word •

    $default  reduce using rule 3 (sentence)


State 11

    0 $accept: text_file "EOF" •

    $default  accept


State 12

    2 text_file: sentence "EOF" •

    $default  reduce using rule 2 (text_file)


State 13

    4 sentence: sentence word •

    $default  reduce using rule 4 (sentence)
